--- a/css/sass/_pacientes.sass
+++ b/css/sass/_pacientes.sass
@@ -11,16 +11,24 @@
         overflow: hidden
         .agregar-paciente
             width: 100%
-            background: #e94949
             .nuevo
-                left: 0px
-                top: 0px
+                float: left
+                position: absolute
+                margin-left: 76%
+                background: rgb(0, 233, 196)
+                color: #fff
+                border: none
+                border-radius: 100px
+                padding: 10px 40px
+                font-weight: 700
+                cursor: pointer
+                outline: none
         .listado-paciente
-            position: relative
             display: flex
             flex-direction: row
             flex-wrap: wrap
             justify-content: center
+            margin-top: 35px
             .paciente
                 background: #ffffff
                 text-align: center
