--- a/css/sass/_btnMenu.sass
+++ b/css/sass/_btnMenu.sass
@@ -4,7 +4,7 @@
     position: absolute
     background: rgba(0, 0, 0, .5)
     width: 100%
-    height: 100vh
+    height: 100%
     z-index: 10
     top: 0
     left: 0
@@ -13,9 +13,9 @@
     visibility: hidden
     .panelMenu
         width: 100%
-        max-width: 350px
+        max-width: 200px
         background: #32323a
-        height: 1000vh
+        height: 100%
         position: absolute
         transition: all 500ms ease
         transform: translateX(-100%)
@@ -32,7 +32,7 @@
             position: absolute
             color: #fff
             font-size: 25px
-            margin-left: 90%
+            margin-left: 80%
             margin-top: 2%
             cursor: pointer
 #btn-chkMenu
