--- a/css/sass/_pacientes.sass
+++ b/css/sass/_pacientes.sass
@@ -5,16 +5,10 @@
     min-height: 76.5vh
     padding: 30px 0
     border-bottom: 1px ridge black
-    .contenedor-paciente
-        width: 95%
-        margin: auto
-        overflow: hidden
-        .agregar-paciente
+    .agregar-paciente
             width: 100%
             .nuevo
-                float: left
-                position: absolute
-                margin-left: 76%
+                float: right
                 background: rgb(0, 233, 196)
                 color: #fff
                 border: none
@@ -23,6 +17,11 @@
                 font-weight: 700
                 cursor: pointer
                 outline: none
+    .contenedor-paciente
+        width: 95%
+        margin: auto
+        overflow: hidden
+        
         .listado-paciente
             display: flex
             flex-direction: row
