--- a/css/sass/_mediaQueries.sass
+++ b/css/sass/_mediaQueries.sass
@@ -31,3 +31,29 @@
             .listado-paciente                
                 .paciente
                     width: 75%
+@media screen and ( max-width: 544px )
+    .listPaciente
+        .panel-top
+            .agregar-paciente
+                float: none
+                margin-left: 30%
+            .busqueda
+                float: none
+                width: 300px
+                margin-left: 30%
+                margin-bottom: 20px
+@media screen and ( max-width: 416px )
+    .listPaciente
+        .panel-top
+            .agregar-paciente
+                margin-left: 15%
+            .busqueda
+                margin-left: 15%
+@media screen and ( max-width: 342px )
+    .listPaciente
+        .panel-top
+            .agregar-paciente
+                float: none
+                margin-left: 20%
+            .busqueda
+                margin-left: 2%               
