--- a/css/sass/_pacientes.sass
+++ b/css/sass/_pacientes.sass
@@ -5,10 +5,11 @@
     min-height: 76.5vh
     padding: 30px 0
     border-bottom: 1px ridge black
-    .agregar-paciente
-            width: 100%
+    .panel-top
+        width: 100%
+        .agregar-paciente
+            float: right
             .nuevo
-                float: right
                 background: rgb(0, 233, 196)
                 color: #fff
                 border: none
@@ -17,11 +18,32 @@
                 font-weight: 700
                 cursor: pointer
                 outline: none
-    .contenedor-paciente
+        .busqueda
+            float: left
+            width: 300px
+            margin-left: 20px
+            .fltr-controls                    
+                border-radius: 100px
+                padding: 5px 5px
+                text-align: center
+                font-weight: 700
+                outline: none
+            .cancel
+                z-index: 4
+                margin-left: 210px
+                position: absolute
+                margin-top: 7px
+                cursor: pointer
+            .search
+                z-index: 3
+                margin-left: 20px
+                margin-top: 9px
+                cursor: pointer
+                position: absolute
+.contenedor-paciente
         width: 95%
         margin: auto
-        overflow: hidden
-        
+        overflow: hidden        
         .listado-paciente
             display: flex
             flex-direction: row
@@ -29,7 +51,7 @@
             justify-content: center
             margin-top: 35px
             .paciente
-                background: #ffffff
+                background: #ececec
                 text-align: center
                 width: 20%
                 padding: 28px 0px
