--- a/css/sass/_mediaQueries.sass
+++ b/css/sass/_mediaQueries.sass
@@ -21,7 +21,7 @@
             .contenedor-header
                 .btnPanel
                     label
-                        position: fixed
+                        position: absolute
                         display: inline-block
                 .item
                     display: none 
